--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -41,3 +41,14 @@
     font-style: normal;
     font-weight: normal;
 }
+
+.nav-button1{
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    text-decoration: none;
+}
