--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,56 +1,55 @@
-/* AboutUs.css */
-
 .about-us {
     position: relative;
-    background-image: url('../content/BAFlag.webp'); /* Замените на путь к вашему изображению */
-    background-size: auto;
-    background-position: initial;
-    background-attachment: fixed; /* Закрепленный фон при прокрутке */
-    padding: 10rem 0;
-    color: white;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
-.about-us::before {
-    content: '';
+.about-us-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about-us-overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Затемнение фона */
-    z-index: 0;
+    background: rgba(0, 0, 0, 0.5); /* Напівпрозорий фон */
 }
 
 .about-us-content {
-    position: relative;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 2rem;
-    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    max-width: 600px;
 }
 
 .about-us h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
     margin-bottom: 1rem;
-    text-align: center;
-}
-
-.about-us h2 {
-    font-size: 1.8rem;
-    margin-top: 1.5rem;
 }
 
 .about-us p {
-    font-size: 1.1rem;
-    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
 }
 
-.about-us ul {
-    list-style-type: disc;
-    margin-left: 20px;
-    font-size: 1.1rem;
+.about-us-button {
+    background-color: #f04e30;
+    border: none;
+    padding: 1rem 2rem;
+    color: white;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.about-us li {
-    margin-bottom: 0.5rem;
+.about-us-button:hover {
+    background-color: #d44329;
 }
